# ulisse_core

./: .gitignore  Launch Experiment  README.md  finish_experiment.py  gpstime.py  info.txt
bags_to_csv/: CMakeLists.txt  package.xml
bags_to_csv/include/bags_to_csv/: offline_bag_converter.hpp
bags_to_csv/src/: offline_bag2csv_node.cpp  to_csv_node.cpp
bags_to_csv/src/bags_to_csv/: offline_bag_converter.cpp
convert2file/: CMakeLists.txt  package.xml
convert2file/src/: to_csv_node.cpp
nav_filter/: CMakeLists.txt  package.xml
nav_filter/conf/: navfilter.conf  navfilter.yaml  navigation_filter.conf
nav_filter/include/nav_filter/: angle_filter.h  kalman_filter.h  nav_data_structs.hpp  navigation_filter.hpp  pos_vel_observer.hpp
nav_filter/launch/: launchRemappedNavFilter.py
nav_filter/src/: nav_filter_node.cpp  nav_filter_udp_sender.cpp  navigation_filter_node.cpp
nav_filter/src/nav_filter/: angle_filter.cpp  kalman_filter.cpp  nav_data_structs.cpp  navigation_filter.cpp  pos_vel_observer.cpp
surface_vehicle_model/: CMakeLists.txt  package.xml
surface_vehicle_model/conf/: ulisse_model.conf
surface_vehicle_model/include/surface_vehicle_model/: surfacevehiclemodel.h  surfacevehiclemodel.hpp
surface_vehicle_model/src/: surfacevehiclemodel.cpp
ulisse_avoidance/: CMakeLists.txt  README.md  package.xml
ulisse_avoidance/conf/: configuration.cfg  configuration.conf
ulisse_avoidance/include/ulisse_avoidance/: data_structs.hpp  directory_manager.hpp  local_planner.hpp  oal_interface.hpp  path_planner.hpp  plan.hpp  test.hpp  utilities.hpp
ulisse_avoidance/scripts/: conversion.py  plot_distances.py  plotter.py  rosbag_reader.py  test_manager.py
ulisse_avoidance/src/: oal_interface.cpp  planner_node.cpp  test.cpp
ulisse_avoidance/src/ulisse_avoidance/: local_planner.cpp  path_planner.cpp  plan.cpp
ulisse_catl/: CMakeLists.txt  package.xml
ulisse_catl/conf/: ulisse_catl.conf
ulisse_catl/include/: externalAgent.hpp  publishCATL.hpp  publishImage.hpp  publishToMqtt.hpp  subscribeCATL.hpp
ulisse_catl/src/: externalAgent.cpp  publishCATL.cpp  publishCATLNode.cpp  publishCommands.cpp  publishImage.cpp  publishToMqtt.cpp  subscribeCATL.cpp  subscribeCATLNode.cpp
ulisse_ctrl/: .clang-format  CMakeLists.txt  helper.js  package.xml
ulisse_ctrl/conf/: 1  PriorityLevel.conf  Tasks.conf  dcl_ulisse.conf  dcl_ulisse.yaml  kcl_ulisse.conf  kcl_ulisse.yaml  llc_ulisse.yaml  navfilter.yaml  ulisse.yaml
ulisse_ctrl/include/ulisse_ctrl/: Nurbs.h  concave_segments.h  configuration.h  configuration.hpp  ctrl_data_structs.hpp  data_structs.hpp  dynamic_vehicle_controller.hpp  fsm_defines.hpp  geometry_defines.h  helper_functions.hpp  kinematic_vehicle_controller.hpp  nav_data_structs.hpp  nurbs.h  path_manager.h  path_manager.hpp  path_manager_alos.hpp  path_manager_current.hpp  path_manager_ilos.hpp  path_manager_iloscurrent.hpp  pos_vel_observer.hpp  ulisse_defines.hpp  ulisse_definitions.h  vehicle_controller.hpp  vehiclecontroller.hpp
ulisse_ctrl/launch/: launchControl.py  launchControl2.py  launchControlAndSim.py  launch_pub_sub.py
ulisse_ctrl/scripts/: rosbagbridge.sh  run_bridge_in_gnome_tabs.sh  run_ros_bridge.sh
ulisse_ctrl/src/: bongio.cpp  controller_console_node.cpp  controller_node.cpp  controller_node.cpp.autosave  dynamic_control_node.cpp  kinematic_control_node.cpp  low_level_control_node.cpp  monitor_node.cpp  navigation_filter_node.cpp  nurbs.cpp  publisher_test.cpp  spline.cpp  subscriber_test.cpp
ulisse_ctrl/src/ulisse_ctrl/: Nurbs.cpp  configuration.cpp  dynamic_vehicle_controller.cpp  helper_functions.cpp  kinematic_vehicle_controller.cpp  nurbs.cpp  path_manager.cpp  path_manager_alos.cpp  path_manager_current.cpp  path_manager_ilos.cpp  path_manager_iloscurrent.cpp  pos_vel_observer.cpp  vehicle_controller.cpp  vehiclecontroller.cpp  (+1 more)
ulisse_ctrl/test/: control_test.cpp
ulisse_driver/: CMakeLists.txt  package.xml
ulisse_driver/conf/: sender_thread.yaml  ulisse_driver.conf  ulisse_driver.yaml  ulisse_driver.yaml.bak
ulisse_driver/launch/: launchDriver.py  launchGPSSetup.py
ulisse_driver/src/: driver_console_node.cpp  driver_node.cpp  ees_driver_node.cpp  gps_publisher_node.cpp  gps_setup_node.cpp  llc_driver_node.cpp  taskEESConsole.cc  taskEESMessagePrinter.cc
ulisse_map/: .qmlls.ini  .qmlproject  CMakeLists.txt  package.xml  ulisse_map.pro
ulisse_map/src/: addonsbridge.cpp  addonsbridge.hpp  commandwrapper.cpp  commandwrapper.h  commandwrapper.hpp  feedbackupdater.cpp  feedbackupdater.h  feedbackupdater.hpp  futils.hpp  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  taskdataupdater.cpp  taskdataupdater.h  taskdataupdater.hpp
ulisse_msgs/: CMakeLists.txt  mapping_rules.yaml  package.xml
ulisse_msgs/msg/: AHRSData.msg  AmbientSensors.msg  AppliedMotorReference.msg  AvoidancePath.msg  AvoidancePathChange.msg  AvoidanceStatus.msg  Boundaries.msg  BoundingBox.msg  CommandHold.msg  CommandLatLong.msg  CommandNavigate.msg  CommandPath.msg  CommandPathFollow.msg  CommandSpeedHeading.msg  Compass.msg  Compass.msg.bak  ControlContext.msg  ControlData.msg  CoordinateList.msg  Curves.msg  DVLData.msg  DynamicPidControl.msg  EESBattery.msg  EESBeep.msg  EESConfig.msg  EESMotors.msg  EESStatus.msg  FOGData.msg  FeedbackGui.msg  GPS.msg  GPSData.msg  GPSStatus.msg  GoalContext.msg  IMUData.msg  KCLStatus.msg  LLCAck.msg  LLCBattery.msg  LLCConfig.msg  LLCPowerButtons.msg  LLCPumps.msg.bak  (+43 more)
ulisse_msgs/srv/: ComputeAvoidancePath.srv  ControlCommand.srv  EESCommand.srv  LLCCommand.srv  NavFilterCommand.srv  ResetConfiguration.srv  RosbagCmd.srv  SetBoundaries.srv  SetCruiseControl.srv
ulisse_sim/: CMakeLists.txt  package.xml
ulisse_sim/conf/: simparams.conf  simparams.yaml  simulator_ulisse.conf
ulisse_sim/launch/: launchSim.py
ulisse_sim/meshes/: ulisse1_simplified.dae  ulisse2_simplified.dae
ulisse_sim/src/: sim_from_log_node.cpp  simulator.cpp  simulator_node.cpp
ulisse_vis/: CMakeLists.txt  package.xml
ulisse_vis/conf/: visualizer_ulisse.conf
ulisse_vis/src/: stonefish_node.cpp  visualizer_node.cpp
(+421 files in other folders)
