<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ulisse_catl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="4327941@studenti.unige.it">graal</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>ulisse_msgs</build_depend>
    <build_depend>ulisse_ctrl</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ulisse_msgs</exec_depend>
    <exec_depend>ulisse_ctrl</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
