<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ulisse_ctrl</name>
  <version>0.0.1</version>
  <description>OM2 Control</description>
  <maintainer email="enrico.simetti@unige.it">Enrico Simetti</maintainer>
  <license>Apache License 2.0</license>
  <author>Francesco Wanderlingh</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ulisse_msgs</build_depend>
  <build_depend>ulisse_driver</build_depend>
  <build_depend>rml</build_depend>
  <build_depend>fsm</build_depend>
  <build_depend>ctrl_toolbox</build_depend>
  <build_depend>surface_vehicle_model</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ulisse_msgs</exec_depend>
  <exec_depend>ulisse_driver</exec_depend>
  <exec_depend>rml</exec_depend>
  <exec_depend>fsm</exec_depend>
  <exec_depend>ctrl_toolbox</exec_depend>
  <exec_depend>surface_vehicle_model</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

